login css changes

--- a/style.css
+++ b/style.css
@@ -949,3 +949,6 @@ table {
       font-weight: bold;
     }
   }
+
+  /* ---------------------------------------------------
+  vdfbffffffffffffffffffffffffffffffffffffffffff */
